--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:400px;height:500px">
   <head>
     <meta charset="utf-8" />
-    <title>Clear Wallet</title>
+    <title>MagicCraft</title>
 
     <base href="/" />
 
